Validations related to Multi Input fields - Serial No and Traceability No

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -192,7 +192,9 @@ sapUiFormContainerTitle>.sapUiFormTitleH1,
     background-color: skyblue;
 }*/
 
+/* Added custom class for styling the width of value help dialog opened on click of serial no and traceability multi input fields - Code Start*/
 .vhdialogstyleclass {
     min-width: 20rem;
     width: 600px !important;
 }
+/* Added custom class for styling the width of value help dialog opened on click of serial no and traceability multi input fields - Code End*/
