Code Changes as on 15-09 related to NC Header and NC Creation screen

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -186,6 +186,10 @@ sapUiFormContainerTitle>.sapUiFormTitleH1,
     color: white;
 }
 
+.sapMLIBHighlightInformation {
+    background: none;
+}
+
 /*block layout color*/
 /*.sapUiBlockLayoutBackgroundDashboard:not(.sapUiBlockLayoutSizeS) .sapUiBlockLayoutRow:last-of-type .sapUiBlockCellContent {
     background-color: skyblue;
