Code Fixes as on 16/09

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -44,11 +44,11 @@
     color: #333333 !important;
 }
 
-#__xmlview0--idworkgroup.sapMText.sapUiSelectable.sapMTextMaxWidth.sapUiLargeMarginTopBottom.sapMBarChild{
+/* #__xmlview0--idworkgroup.sapMText.sapUiSelectable.sapMTextMaxWidth.sapUiLargeMarginTopBottom.sapMBarChild{
    color: white;
    font-weight: bold;
 
-}
+} */
 
 
 /* [aria-selected="true"] {
